--- a/styles/architects.css
+++ b/styles/architects.css
@@ -3,3 +3,82 @@
 *{
     font-family: "Work Sans", sans-serif;
 }
+.btn-primary{
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    font: size 1.25rem; 
+    color:  #FFF;
+    cursor: pointer;
+    border: 0;
+}
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 200px;
+  
+}
+.nav-title{
+    color: var(--Dark-01, #131313);
+font-size:  2rem;
+font-weight: 700;
+ 
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+nav > ul {
+    display: flex;
+}
+nav  li {
+list-style: none;
+margin: 30px;
+font-weight: 500;
+font-size: 1rem;
+}
+nav li a{
+    text-decoration: none;
+    color: #424242;
+}
+.banner-content{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-title{
+    color: var(--Dark-01, #131313);
+font-size: 64px;
+ font-weight: 700;
+ 
+}
+.banner-description{
+    color: var(--Dark-03, #727272);
+font-size: 16px;
+ font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.banner img{
+    width: 100%;
+    margin-top: 20px;
+}
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+}
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    
+    
+}
