--- a/styles/architects.css
+++ b/styles/architects.css
@@ -3,6 +3,9 @@
 *{
     font-family: "Work Sans", sans-serif;
 }
+.text-light-gray{
+    color: #727272;
+}
 .btn-primary{
     border-radius: 8px;
     background: #FF900E;
@@ -63,25 +66,7 @@ line-height: 26px; /* 162.5% */
     width: 100%;
     margin-top: 20px;
 }
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
-}
-@media screen and (min-width:576px) and (max-width:992px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
-    
-}
+
 
 main{
     max-width: 1440px;
@@ -116,4 +101,27 @@ main{
 .teams-title .feature{
     color: #FF900E;
     font-weight: 700;
+}
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav, 
+    .team-container{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    
+}
+@media screen and (min-width:576px) and (max-width:992px) {
+    header{
+        padding: 50px;
+    }
+    nav, .team-container{
+        flex-direction: column;
+    }
+    
+    
 }
