--- a/styles/architects.css
+++ b/styles/architects.css
@@ -102,6 +102,37 @@ main{
     color: #FF900E;
     font-weight: 700;
 }
+.some-facts{
+    
+    color: var(--Dark-01, #131313);
+    font-size: 45px;
+    font-weight: 700;
+}
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px 30px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 20px;
+}
+
+
+
+
+
 @media screen and (max-width:576px) {
     header{
         padding: 20px;
