--- a/styles/architects.css
+++ b/styles/architects.css
@@ -128,6 +128,19 @@ main{
     font-weight: 600;
     font-size: 20px;
 }
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 
@@ -138,13 +151,19 @@ main{
         padding: 20px;
     }
     nav, 
-    .team-container{
+    .team-container,
+    .facts-card-container,
+    .sponsors-img-container,
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    
+    .facts-card-container{
+        gap: 20px;
+    }
 }
 @media screen and (min-width:576px) and (max-width:992px) {
     header{
